// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`env-variable-prefix-test allows using a different prefix applies on COLOR variable 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [
    Array [
      "[1] [97m[101mERROR ctx should have color[49m[39m",
      "ERROR",
      "ctx",
    ],
    Array [
      "[2] ERROR ctx should not have color",
      "ERROR",
      "ctx",
    ],
  ],
}
`;

exports[`env-variable-prefix-test allows using a different prefix applies to context specific overrides 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [
    Array [
      "[1] [95mDEBUG highprio should show up[39m",
      "DEBUG",
      "highprio",
    ],
  ],
  "INFO" => Array [],
  "WARN" => Array [],
  "ERROR" => Array [],
}
`;

exports[`env-variable-prefix-test allows using a different prefix applies to default log level override 1`] = `
Map {
  "NONE" => Array [],
  "DEBUG" => Array [],
  "INFO" => Array [],
  "WARN" => Array [
    Array [
      "[1] [93mWARN ctx should show up[39m",
      "WARN",
      "ctx",
    ],
  ],
  "ERROR" => Array [],
}
`;
